main/vpc.tf
resource "aws_vpc" qa {
  cidr_block = var.vpc_cidr
  enable_dns_support = true
  enable_dns_hostnames = true
 
  tags = {
    Name = "${var.project_name}-vpc"
    Environment = "QA"
  }
}

resource "aws_internet_gateway" "qa" {
  vpc_id =  aws_vpc.qa.id

  tags = {
    Name = "${var.project_name}-igw"
  }
}

resource "aws_subnet" "public"  {
  vpc_id = aws_vpc.qa.id
  cidr_block = var.public_subnet_cidr
  availability_zone = var.availability_zone
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-public-subnet"
  }
}

resource  "aws_route_table" "public" {
  vpc_id  =  aws_vpc.qa.id
  
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id =  aws_internet_gateway.qa.id
  }

  tags = {
    Name = "${var.project_name}-public-rt"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
